--- a/react-demos-master/demo01/index.html
+++ b/react-demos-master/demo01/index.html
@@ -8,10 +8,22 @@
   <body>
     <div id="example"></div>
     <script type="text/babel">
-      ReactDOM.render(
-        <h1>Hello, world!</h1>,
-        document.getElementById('example')
-      );
+      var MyTitle=React.createClass({
+        propTypes:{
+          title:React.Protypes.string.isRequired,
+        },
+        render:function(){
+          return <h1>{this.props.title}</h1>;
+        }
+      });
+
+    var data = "123";
+
+    ReactDOM.render(
+      <MyTitle title={data} />,
+      document.body
+    );
+
     </script>
   </body>
 </html>
