--- a/3.html
+++ b/3.html
@@ -34,6 +34,7 @@ var ProfilePic = React.createClass({
 var ProfileLink = React.createClass({
   render: function() {
     return (
+      <span><span>
       <a href={'http://www.facebook.com/' + this.props.username}>
         {this.props.username}
       </a>
