--- a/react-demos-master/demo01/index.html
+++ b/react-demos-master/demo01/index.html
@@ -10,7 +10,7 @@
     <script type="text/babel">
       var MyTitle=React.createClass({
         propTypes:{
-          title:React.Protypes.string.isRequired,
+          title:React.Protypes.String.isRequired,
         },
         render:function(){
           return <h1>{this.props.title}</h1>;
